--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,11 @@
 [platformio]
 
 [env:dev_usb]
-platform = espressif32
+# platform = espressif32
+platform                    = https://github.com/platformio/platform-espressif32.git#feature/arduino-idf-master
+platform_packages           = framework-arduinoespressif32 @https://github.com/espressif/arduino-esp32.git#2.0.1
+                              platformio/tool-esptoolpy @https://github.com/tasmota/esptool/releases/download/v3.2/esptool-v3.2.zip
+
 framework = arduino
 board = esp32cam
 # monitor_filters = esp32_exception_decoder # , time
@@ -30,7 +34,8 @@ lib_deps =
 	espressif/esp32-camera@^2.0.0
 	bitbank2/JPEGDEC@^1.2.6
 	mbed-team2/Arduino@0.0.0+sha.d96590319bcf
-	me-no-dev/AsyncTCP@^1.1.1
-	https://github.com/me-no-dev/ESPAsyncWebServer.git
-	https://github.com/ayushsharma82/AsyncElegantOTA.git
-	ayushsharma82/WebSerial@^1.3.0
+
+[env:dev_ota]
+extends = env:dev_usb
+upload_protocol = espota
+upload_port = 192.168.2.22
