--- a/platformio.ini
+++ b/platformio.ini
@@ -11,31 +11,37 @@
 [platformio]
 
 [env:dev_usb]
-# platform = espressif32
-platform                    = https://github.com/platformio/platform-espressif32.git#feature/arduino-idf-master
-platform_packages           = framework-arduinoespressif32 @https://github.com/espressif/arduino-esp32.git#2.0.1
-                              platformio/tool-esptoolpy @https://github.com/tasmota/esptool/releases/download/v3.2/esptool-v3.2.zip
-
+platform = https://github.com/platformio/platform-espressif32.git#feature/arduino-idf-master
+platform_packages = framework-arduinoespressif32 @https://github.com/espressif/arduino-esp32.git#2.0.1
+	platformio/tool-esptoolpy @https://github.com/tasmota/esptool/releases/download/v3.2/esptool-v3.2.zip
 framework = arduino
 board = esp32cam
-# monitor_filters = esp32_exception_decoder # , time
-src_filter = +<*>
+build_src_filter = +<*>
 upload_port = /dev/cu.usbserial-*
 upload_speed = 460800
 board_build.partitions = min_spiffs.csv
-build_flags =
+build_flags = 
 	-D BUILD_ENV_NAME=dev_usb
 	-D CORE_DEBUG_LEVEL=5
 	-D BUILD_ENV_ID=2
 	-D BOARD_HAS_PSRAM
 	-D CONFIG_SPIRAM_CACHE_WORKAROUND
 	-mfix-esp32-psram-cache-issue
-lib_deps =
+lib_deps = 
 	espressif/esp32-camera@^2.0.0
 	bitbank2/JPEGDEC@^1.2.6
 	mbed-team2/Arduino@0.0.0+sha.d96590319bcf
+	bblanchon/ArduinoJson@5.13.4
+	knolleary/PubSubClient@2.7
+	jandrassy/ArduinoOTA@1.0
+	adafruit/Adafruit Unified Sensor@^1.1.14
 
 [env:dev_ota]
 extends = env:dev_usb
 upload_protocol = espota
 upload_port = 192.168.2.22
+lib_deps = 
+	bblanchon/ArduinoJson@5.13.4
+	knolleary/PubSubClient@2.7
+	jandrassy/ArduinoOTA@1.0
+	adafruit/Adafruit Unified Sensor@^1.1.14
