--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,5 @@
-OTA_PASSWORD=
-SSID=BB
-WIFI_PASSWORD=
-MQTT_SERVER=
-MQTT_USER=mosquitto
-MQTT_PASSWORD=
+SSID=xx
+WIFI_PASSWORD=xxx
+DEVICE_NAME=xxx
+ESP_IP=xxx
+OTA_PASSWORD=xxx
